--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,25 @@
+.background{
+  height: 100vh;
+  width:  100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .Welcome-section{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  background-color: rgb(211, 206, 206);
-  margin: 5% auto;
   border-radius: 18px;
   height: 80vh;
   width: 80vw;
+  background-color: rgb(61, 154, 246);
   
 
 }
 
 .welcome-empty-section{
-  background-color: rgb(101, 94, 151);
+  background-color: rgb(61, 154, 246);
   height: 80vh;
   width: 15vw;
   border-radius: 18px;
@@ -23,7 +30,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  background-color: rgb(169, 222, 243);
+  border: white 10px solid;
+
+  border-radius: 30px;
+  height: 79vh;
   width: 65vw;
   font-size: 2.5vw;
   font-weight:600;
@@ -34,17 +45,21 @@
   padding: 2vh 6vh 2vh 6vh;
   font-size: 60%;
   border-radius: 18px;
-  color: rgb(255, 255, 255);
-  border: white solid;
-  font-weight: 500;
-  background-color: rgb(162, 216, 207);
+  border: rgba(70, 50, 219, 0.76);
+  color: white;
+  font-weight: 700;
+  background-color: rgba(72, 183, 231, 0.591);
 
 }
 
 .Welcome-button:hover{
-  transform: scale(1.13) translate(0, 30%);
+  transform: scale(1.2) translate(0, 20%);
   font-weight: 100;
   cursor: pointer;
+  color: white;
   border: white solid;
-  box-shadow: 2px 2px 4px red;
+  font-weight: 700;
+
+  box-shadow: 2px 2px 4px rgba(72, 183, 231, 0.591);
+  background-color: rgba(72, 183, 231, 0.591);
 }
