--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,33 @@
   font-family: sans-serif;
 }
 
+.WeatherIcon{
+color: white;
+width: 50%;
+height: 50%;
+vertical-align: middle;
+margin-left: 25%;
+
+animation: border-icon 0.5s linear infinite;
+
+}
+
+@keyframes border-icon {
+  0% {
+    color: red;
+  }
+  25% {
+    color: rgb(253, 122, 0);
+  }
+  75% {
+    color: orange;
+  }
+  100% {
+    color: blue;
+  }
+}
+
+
 .Welcome-section{
   display: flex;
   flex-direction: row;
@@ -26,6 +53,9 @@
   height: 80vh;
   width: 15vw;
   border-radius: 25px;
+  border-left: rgb(236, 236, 236) solid 2px ;
+
+
 }
 
 .Welcome-heading {
@@ -35,16 +65,18 @@
   align-items: center;
   background-color: rgb(169, 222, 243);
   border-radius: 60px 18px 18px 60px;
-  height: 80vh;
+  height: 79.5vh;
   width: 65vw;
   font-size: 2.5vw;
   font-weight:600;
+  border: rgba(252, 252, 252, 0.591) solid;
+
 }
 
 .Welcome-button {
   margin-top: 5vh;
   padding: 2vh 6vh 2vh 6vh;
-  font-size: 60%;
+  font-size: 80%;
 
   color: white;
   font-weight: 700;
@@ -52,7 +84,7 @@
   border-radius: 118px;
   background-color: rgb(61, 154, 246);
   box-shadow: 4px 8px 16px rgba(72, 183, 231, 0.591);
-  animation: running-border 2s linear infinite;
+  animation: running-border 1s linear infinite;
 
 }
 
@@ -64,7 +96,7 @@
     border-right: white 5px solid;
   }
   75% {
-    border-bottom: white 10px solid;
+    border-bottom: white 8px solid;
   }
   100% {
     border-left: white 5px solid;
@@ -72,7 +104,7 @@
 }
 
 .Welcome-button:hover{
-  transform: scale(1.2) translate(0, 20%);
+  transform: scale(1.1) translate(0, 20%);
   font-weight: 100;
   cursor: pointer;
   color: white;
