--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -1,14 +1,14 @@
-.dash-background{
+.dash-background {
     height: 100vh;
-    width:  100vw;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
-  }
-    
-  
-  .dash-section{
+}
+
+
+.dash-section {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -16,27 +16,27 @@
     height: 80vh;
     width: 70vw;
     background-color: rgba(1, 66, 106, 0.445);
-    
-    
-  
-  }
 
-    
 
-  
-  
-  .dash-empty-section{
+
+}
+
+
+
+
+
+.dash-left-section {
     background-color: rgba(1, 66, 106, 0.445);
     height: 80vh;
     width: 13vw;
     border-radius: 25px;
 
-  
-  
-  }
 
 
-  .dash-heading {
+}
+
+
+.dash-right-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -46,11 +46,34 @@
     height: 79.5vh;
     width: 69vw;
     font-size: 2.5vw;
-    font-weight:600;
+    font-weight: 600;
     border: rgba(252, 252, 252, 0.591) solid;
     background-image: url(../../public/6206160.jpg);
     background-position: 10%;
     background-size: 100%;
-  
-  }
 
+}
+
+.daily-temp {
+    margin-top: 2%;
+    height: 100vh;
+    width: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items:flex-start;
+}
+
+.temp-boxes {
+    /* background-color: white; */
+    background-color: rgba(158, 187, 237, 0.247);
+    font-size: 50%;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    width: 20vw;
+    display: flex;
+    margin-right: 1%;
+    border: white solid 3px;
+    box-shadow: white 2px 2px 2px;
+}
