--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -37,10 +37,7 @@
 
 
 .dash-right-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     background-color: rgb(169, 222, 243);
     border-radius: 60px 18px 18px 60px;
     height: 79.5vh;
@@ -54,26 +51,64 @@
 
 }
 
+.dash-right-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
 .daily-temp {
     margin-top: 2%;
     height: 100vh;
     width: 100vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items:flex-start;
 }
 
 .temp-boxes {
-    /* background-color: white; */
     background-color: rgba(158, 187, 237, 0.247);
     font-size: 50%;
     color: white;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 20vh;
     width: 20vw;
     display: flex;
     margin-right: 1%;
     border: white solid 3px;
-    box-shadow: white 2px 2px 2px;
+    box-shadow: white 2px 2px 12px;
+    border-radius: 20px;
+
 }
+
+.other-weather-details {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .humidity {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    height: 20vh;
+    width: calc(50vw / 3 - 1%);
+    flex-wrap: wrap;
+    background-color: rgba(158, 187, 237, 0.438);
+    border-radius: 50vh 50vh 50vh 50%;
+    font-size: 1.5vw;
+    font-weight: 600;
+    justify-content: center;
+    display: flex;
+    align-items: flex-start;
+    color: orange;
+
+
+  }
+  
