--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -50,20 +50,21 @@
 
 }
 
-.dash-right-content{
+.dash-right-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
     width: 100%;
 }
+
 .daily-temp {
     margin-top: 2%;
     height: 100vh;
     width: 100vh;
     display: flex;
     justify-content: center;
-    align-items:flex-start;
+    align-items: flex-start;
 }
 
 .temp-boxes {
@@ -75,7 +76,7 @@
     height: 15vh;
     width: 20vw;
     flex-direction: column;
-
+    background-color: rgba(0, 179, 255, 0.338);
     display: flex;
     margin-right: 2%;
     border: white solid 3px;
@@ -84,39 +85,30 @@
 
 }
 
+.dash-right-bottom-section {
+    /* background-color: orange; */
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+
+}
+
+.Wind {
+    height: 90%;
+    margin-bottom: 10%;
+
+}
+
+.thermom {
+    height: 90%;
+    width: 10vw;
+}
 
 .temp-boxes:hover {
     transform: scale(1.1);
     border: rgb(0, 119, 255) solid 3px;
 
 }
-
-.other-weather-details {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    flex-direction: row;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .humidity {
-    margin-top: 1%;
-    margin-bottom: 1%;
-    margin-right: 1%;
-    height: 20vh;
-    width: calc(50vw / 3 - 1%);
-    flex-wrap: wrap;
-    background-color: rgba(158, 187, 237, 0.438);
-    border-radius: 50vh 50vh 50vh 50%;
-    font-size: 1.5vw;
-    font-weight: 600;
-    justify-content: center;
-    display: flex;
-    align-items: flex-start;
-    color: orange;
-
-
-  }
-  
