--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -91,7 +91,7 @@
     height: 100vh;
     width: 100%;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
 
 }
@@ -102,14 +102,37 @@
 
 }
 
-.thermom {
+.thermom-section-left {
+    margin-left: 10%;
+    margin-right: 15%;
     height: 90%;
+    width: 1vw;
+    border: solid white 2px;
+    border-radius: 25px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.thermom-section-right {
+    margin-left: 15%;
+    height: 90%;
+    width: 1vw;
+    border: solid white 2px;
+    border-radius: 25px;
+    display: flex;
+    align-items: flex-end;
+
+}
+
+.thermom{
+    background-color: rgb(35, 202, 149);
     width: 1vw;
 }
 
 .temp-boxes:hover {
     transform: scale(1.1);
     border: rgb(0, 119, 255) solid 3px;
+    cursor: pointer;
 
 }
 
