adjusted login/register font size for responsive app

--- a/client/src/css/Loginform.css
+++ b/client/src/css/Loginform.css
@@ -2,7 +2,7 @@
     height: 5vh;
     width: 20vw;
     margin-top: 4vh;
-    font-size: 20px;
+    font-size: 55%;
     padding: 2%;
     background-color: rgba(22, 157, 225, 0.247);
     color: rgb(255, 255, 255);
@@ -17,7 +17,7 @@
     height: 5vh;
     width: 20vw;
     padding: 2%;
-    font-size: 20px;
+    font-size: 55%;
     background-color: rgba(22, 157, 225, 0.247);
     color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -30,7 +30,7 @@
     margin-top: 5vh;
     padding: 1vh 4vh 1vh 4vh;
     width: 20vw;
-    font-size: 25px;
+    font-size: 60%;
     cursor: pointer;
 
     color: white;
@@ -44,7 +44,7 @@
 .Register {
     padding: 0.5vh 2vh 0.5vh 2vh;
     width: 20vw;
-    font-size: 20px;
+    font-size: 50%;
     cursor: pointer;
     text-align: center;
 
