--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    border-radius: 25px;
+    border-radius: 1em;
     height: 80vh;
     width: 70vw;
     background-color: rgb(1, 66, 106);
@@ -28,7 +28,7 @@
 .dash-left-section {
     height: 80vh;
     width: 13vw;
-    border-radius: 25px;
+    border-radius: 1em;
 
 
 
@@ -38,7 +38,7 @@
 .dash-right-section {
 
     background-color: rgb(169, 222, 243);
-    border-radius: 60px 18px 18px 60px;
+    border-radius: 1em;
     height: 79.5vh;
     width: 69vw;
     font-size: 2.5vw;
@@ -82,7 +82,7 @@
     margin-right: 2%;
     border: solid white 0.15em;
     box-shadow: white 2px 2px 12px;
-    border-radius: 20px;
+    border-radius: 1em;
 
 }
 
@@ -109,7 +109,7 @@
     height: 90%;
     width: 1vw;
     border: solid white 0.1em;
-    border-radius: 25px;
+    border-radius: 1em;
     display: flex;
     align-items: flex-end;
 }
@@ -119,7 +119,7 @@
     height: 90%;
     width: 1vw;
     border: solid white 0.1em;
-    border-radius: 25px;
+    border-radius: 1em;
     display: flex;
     align-items: flex-end;
 
