--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -39,14 +39,41 @@
 .Other-Weather-Section {
     /* background-color: greenyellow; */
     height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 
+}
+
+.Wind-Speed, .Precipition, .Humidity{
+    color: white;
+    font-size: 1.3vw;
+    margin-left: 5%;
 }
 
 .Time {
     color: white;
     font-size: 1.8vw;
     /* background-color: ORANGE; */
+    animation: Time-blink 2s linear infinite;
+
 }
+
+@keyframes Time-blink {
+    0% {
+      opacity: 0;
+
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+
+    }
+  }
+  
 
 
 .dash-right-section {
