--- a/client/src/css/Loginform.css
+++ b/client/src/css/Loginform.css
@@ -86,23 +86,23 @@ input::placeholder {
 
 }
 
-input:focus {
+/* input:focus {
     background-color: rgb(19, 121, 237);
     border-bottom: white 5px solid;
-}
+} */
 
 
 .loader{
     background-color: rgba(22, 157, 225, 0.247);
-    border-top:  rgb(255, 132, 0) 10px solid;
-    border-bottom: rgb(255, 132, 0) 10px solid;
-    border-left: white 10px solid;
-    border-right: rgb(99, 179, 229) 10px solid;
+    border-top:  rgb(255, 132, 0) 0.2em solid;
+    border-bottom: rgb(255, 132, 0) 0.2em solid;
+    border-left: white 0.2em solid;
+    border-right: rgb(99, 179, 229) 0.2em solid;
     border-radius: 50%;
 
     animation: loading 1s linear infinite;
-    height: 1em;
-    width: 1em;
+    height: 1.1em;
+    width: 1.1em;
     display: none;
   
     
