--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -113,7 +113,16 @@
     align-content: center;
     padding: 0.5em 0.1em 0.5em 0.11em;
     font-weight: bold;
-    border: white 5px solid;
+    border: white 2px solid;
+
+}
+
+.feels-like{
+    margin-top: 2%;
+    color: rgb(255, 255, 255);
+    font-size: 0.9vw;
+
+
 
 }
 
@@ -126,7 +135,7 @@
 
 .Latitude, .Longitude{
     color: rgb(255, 255, 255);
-    font-size: 1vw;
+    font-size: 1.1vw;
     /* margin-top: 5%; */
 }
 
@@ -158,7 +167,7 @@
 
 .daily-right-top-section {
     margin-top: 2%;
-    height: 100vh;
+    height: 80vh;
     width: 100vh;
     display: flex;
     justify-content: center;
@@ -166,16 +175,16 @@
     /* background-color: orange; */
 }
 
-.temp-boxes {
-    background-color: rgba(158, 187, 237, 0.247);
-    font-size: 50%;
+.Wind {
+    /* background-color: rgba(158, 187, 237, 0.247); */
+    font-size: 2vw;
     color: rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
-    height: 15vh;
+    height: 10vh;
     width: 20vw;
     flex-direction: column;
-    background-color: rgba(0, 179, 255, 0.338);
+    background-color: rgba(0, 255, 242, 0.338);
     display: flex;
     margin-right: 2%;
     border: solid white 0.15em;
@@ -197,7 +206,7 @@
 
 }
 
-.Wind {
+.WindGraph {
     margin-bottom: 10%;
     width: 15em; 
     height: 10em; 
