--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -124,7 +124,6 @@
     justify-content: center;
     padding: 0.5em 0.1em 0.5em 0.11em;
     font-weight: bold;
-    border: white 2px solid;
     cursor: pointer;
     flex-direction: row;
     display: flex;
@@ -132,6 +131,8 @@
 
 .Temperature:hover {
     transform: scale(1.1);
+    border: white 2px solid;
+
 }
 
 .feels-like{
@@ -227,7 +228,21 @@
     margin-bottom: 10%;
     width: 15em; 
     height: 10em; 
+    font-size: 90%;
+    text-align: center;
+    color: white;
+    cursor: pointer;
 }
+
+.chart-label-small {
+    font-size: 1.5vw;
+    border: white solid 0px;
+  }
+
+  .chart-label-small:hover {
+    transform: scale(1.1);
+  }
+  
 
 .thermom-section-left {
     margin-bottom: 5%;
@@ -238,6 +253,8 @@
     border-radius: 1em;
     display: flex;
     align-items: flex-end;
+    background-color: orange;
+    /* flex-direction: column; */
 }
 
 .thermom-section-right {
