--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -211,13 +211,22 @@
     padding: 1%;
 }
 
+.UserDetails{
+    height: 15h;
+    width: 100%;
+    font-size: 0.35em;
+    color: orange;
+    text-align: right;
+    margin-bottom: 1%;
+
+}
 .Wind {
     font-size: 2vw;
     color: rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
     align-self: center;
-    height: 10vh;
+    height: 8vh;
     width: 30vw;
     cursor: pointer;
     /* flex-direction: column; */
